# qubership-envgene

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Docker_для_начинающих.md  Makefile  README.md  log.txt  pyrightconfig.json  renovate.json
.github/scripts/: check_pypi_credentials.py  check_pypi_version.py  set_pyproject_version.py
.github/workflows/: dev-build-docker-images.yml  docker_publish_release.yml  external-cred-provision-pypi-publish.yaml  perform_tests.yml  pr-conventional-commits.yaml  sonar-check.yml  sync-github-folder.yml
.qubership/: grand-report.json
build_effective_set_generator/: pom.xml
build_effective_set_generator/commons/: pom.xml
build_effective_set_generator/effective-set-generator/: pom.xml
build_effective_set_generator/gstring-to-jinjava-translator/: pom.xml
build_effective_set_generator/parameter-calculator-bom/: pom.xml
build_effective_set_generator/parameters-processor/: pom.xml
build_effective_set_generator/scripts/: effective_set_entrypoint.py  handle_effective_set_config.py  main.py  sboms_retention_policy.py  test_effective_set_entrypoint.py  test_generate_effective_set.py  test_sboms_retention_policy.py
build_envgene/ansible/: ansible.cfg
build_envgene/scripts/: git_commit.py  git_commit.sh  minimize_cred_diffs.py  test_git_commit.py  test_minimize_cred_diffs.py
build_pipegene/scripts/: appregdef_render_job.py  bg_manage_job.py  credential_rotation_job.py  effective_set_job.py  env_build_jobs.py  gitlab_ci.py  inventory_generation_job.py  main.py  passport_jobs.py  pipeline_helper.py  process_sd_job.py  test_gitlab_ci.py
dependencies/: tests_requirements.txt
devtools/: readme.md
devtools/tests/: Dockerfile  run.sh  up.sh
docs/: README.md  discovery-pipeline-parameters.md  envgene-configs.md  envgene-objects.md  envgene-pipelines.md  envgene-repository-variables.md  glossary.md  instance-pipeline-parameters.md  sd-processing.md  template-macros.md  template-pipeline-parameters.md
docs/analysis/: amv2-to-dd-transformation.md  application-manifest-build-cli.md  application-manifest-v2-specification.md  cleanup-app-parameters.md  dd-to-amv2-transformation.md  documentation-gaps-analysis.md  environments-structure.md
docs/dev/: creating-cr.md  docker-build-workflow.md  external-cred-provision-pypi-publish-workflow.md  global-pre-commit-hooks.md  job-artifacts.md  sync-github-folder-workflow.md
docs/features/: app-reg-defs.md  appdef-regdef-template-management-revised.md  appdef-regdef-template-management.md  calculator-cli.md  cloud-passport-processing.md  cred-rotation.md  effective-set-generation.md  env-inventory-generation.md  environment-instance-generation.md  external-creds-provisioning-cli.md  external-creds.md  namespace-filtering-in-template-descriptor.md  resource-profile.md  sbom-retention.md  sbom.md  sd-processing.md  template-composition.md  template-override.md
docs/how-to/: app-reg-defs-add-to-template.md  app-reg-defs-add-without-template.md  configure-resource-profiles.md  defining-complex-parameters-using-yaml-objects.md  docker-registry-configuration.md  envgene-maitanance.md  extend-github-instance-pipeline.md  filter-ns-in-template-descriptor.md  generate-effective-set.md  global-pre-commit-hooks.md  sbom-storage-migration.md  split-cloud-passport-for-business-and-infra.md
docs/samples/: README.md
docs/test-cases/: sd-processing.md
docs/tutorials/: effective-set.md  envgene-null-value.md  resource-profiles.md
docs/use-cases/: README.md  app-reg-defs.md  artifact-downloading.md  auto-environment-name.md  cloud-passport.md  cmdb-import.md  credential-rotation.md  e2e-scenarios.md  envgene-null-value-validation.md  environment-instance-generation.md  environment-inventory-generation.md  gsf-repository-maintenance.md  sbom-retention.md  sbom-storage-migration.md  sd-processing.md  system-certificate.md  template-inheritance.md
examples/: application-manifest-v2-app-chart.json  application-manifest-v2-jaeger.json  application-manifest-v2-qip.json  application-manifest-v2.json  application.sbom.json
extend_github_pipeline/extend_github_instance_pipeline/: .gitignore  .gitlab-ci.yml  README.md
github_workflows/instance-repo-pipeline/: Dockerfile  README.md
python/: build_modules.sh
python/artifact-searcher/: README.md  pyproject.toml
python/envgene/: pyproject.toml
python/envgene/envgenehelper/: __init__.py  business_helper.py  collections_helper.py  config_helper.py  constants.py  creds_helper.py  crypt.py  deployer.py  effective_set_helper.py  file_helper.py  git_helper.py  json_helper.py  models.py  params_helper.py  repo_paths.py  sd_helper.py  test_crypt.py  test_git_helper.py  test_repo_paths.py  test_yaml_helper.py  yaml_helper.py
python/envgene/envgenehelper/crypt_backends/: sops_handler.py
python/envgene/envgenehelper/retry/: __init__.py  duration.py  retry.py
python/envgene/envgenehelper/schemas/: regdef-v2.schema.json
python/envgene/envgenehelper/test_data/: test_credentials.yaml
python/envgene/envgenehelper/test_helpers/: test_helpers.py
python/external-cred-provision/: README.md  pyproject.toml
python/external-cred-provision/src/external_cred_provision/: main.py  provisioner.py
python/external-cred-provision/tests/: test_provisioner.py
python/external-cred-provision/tests/fixtures/: sample-context.yaml  smoke-empty-context.yaml
python/integration/: pyproject.toml
python/jschon-sort/: pyproject.toml
schemas/: application-manifest-v2.schema.json  application.sbom.schema.json  artifact-definition-v2.schema.json  config.schema.json  credential.schema.json  custom-params.schema.json  deployer.schema.json  env-definition.schema.json  integration.schema.json  regdef-v2.schema.json  registry.schema.json  secret-stores.schema.json  template-descriptor.schema.json
scripts/bg_manage/: bg_manage.py
scripts/build_env/: appregdef_render.py  build_env.py  cloud_passport.py  create_credentials.py  filter_namespaces.py  main.py  process_sd.py  render_config_env.py  resource_profiles.py  test_handle_sd.py  test_render_envs.py
(+255 files in other folders)
