[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[project]
name = "envgenehelper"
version = "0.0.1"
requires-python = "~=3.12"

dependencies = [
    "pydantic~=2.10.6"
]


[tool.setuptools.package-data]
envgenehelper = ["schemas/*.json"]

[tool.black]
line-length = 120
skip-string-normalization = true


[tool.mypy]
warn_return_any = true
warn_unused_configs = true
strict_optional = true
strict_equality = true
warn_no_return = true
check_untyped_defs = true
warn_redundant_casts = true
show_error_codes = true
implicit_reexport = false
warn_unreachable = true
disallow_incomplete_defs = true
