[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "external_cred_provision", from = "src"}]

[project]
name = "qubership-external-cred-provision"
version = "0.0.1"
description = "Qubership EnvGene CLI that provisions external credentials into Vault, OpenBao, GCP Secret Manager, and AWS Secrets Manager from a YAML context file."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = "~=3.12"
authors = [
  {name = "Qubership"},
]
maintainers = [
  {name = "Qubership"},
]
keywords = [
  "envgene",
  "credentials",
  "secrets",
  "vault",
  "openbao",
  "gcp",
  "aws",
  "provisioning",
  "vals",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "click==8.1.7",
  "pyyaml==6.0.2",
  "qubership-pipelines-common-library==2.0.12",
]

[project.urls]
Homepage = "https://github.com/Netcracker/qubership-envgene/tree/main/python/external-cred-provision"
Documentation = "https://github.com/Netcracker/qubership-envgene/blob/main/docs/features/external-creds-provisioning-cli.md"
Source = "https://github.com/Netcracker/qubership-envgene/tree/main/python/external-cred-provision"
Issues = "https://github.com/Netcracker/qubership-envgene/issues"
"EnvGene external credentials" = "https://github.com/Netcracker/qubership-envgene/blob/main/docs/features/external-creds.md"

[project.scripts]
external-cred-provision = "external_cred_provision.main:cli"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-v -ra --strict-markers"
markers = [
  "unit: unit tests with mocked secret-store dependencies (no network I/O)",
  "fixture: YAML fixture tests; provider type parsing is still mocked",
]
